src/test/deca/syntax/invalid/mauvais_return_5.deca
// Description:
//    on retourne printx qui n'est pas une exp
//
// Resultats:
// ligne 8: "no viable alternative at input 'printx'"


{ return printx("hey");}
